# Test_python

Dog_cat_classifier/: demo1.py  demo2_data.py
Test_python/: test1.py  test8-ticket.py  test8.py
Test_python/muzhou/: test2.py  test6.py  test7.py  test8-PhoneNumber.py
Test_python/two_hour/: demo1_装饰器函数对象.py  demo2_魔法方法序列特性.py  demo3_多态.py  demo4_抽象类.py  demo5_类属性实例属性.py  demo6_super.py  demo7_混合继承.py  demo8_with.py  demo9_序列.py
Test_python/魔法方法/: demo1_getatt.py  demo2_迭代器.py  demo3_生成器.py  demo4_迭代器生成器.py
chenchenjiang_flow/: README.md  pyproject.toml  requirements.txt  setup.py
chenchenjiang_flow/chenchenjiang_flow/Demo/: demo_test.py  initial_test.py  initial_test2.py  order_show.py
chenchenjiang_flow/chenchenjiang_flow/nn/: core.py
chenchenjiang_flow/chenchenjiang_flow/utils/: utlities.py
multi_softmax-master/: amsoftmax.py  build_lmdb.py  build_resize_dataset.py  build_webdataset.py  cvt_model.py  data_analysis.py  demo_nansha.py  demo_repvgg_quality_ml.py  evaluate.py  generate_txt.py  grad_cam.py  main.py  main_HL.py  main_HL_Xception.py  main_HL_new.py  main_all_mullablel.py  main_inner.py  main_loc.py  main_loc_finetune.py  main_loc_fpn.py  main_oc.py  main_pre.py  main_sam.py  main_sbi.py  main_xbm.py  result_analysis.py  result_show.py  test_dataloader.py  time_test.py  tsne_show.py  txt_analysis.py
multi_softmax-master/head/: AM_Softmax.py  AdM_Softmax.py  OC_Softmax.py  head_conf.yaml  head_def.py
multi_softmax-master/noiseprintpp/: DnCNN.py  __init__.py  demo.py
multi_softmax-master/optimizer/: __init__.py  sam.py
(+77 files in other folders)
